--- a/ui/deploy_tool.ui
+++ b/ui/deploy_tool.ui
@@ -149,7 +149,7 @@
          </spacer>
         </item>
         <item row="3" column="0" colspan="2">
-         <widget class="QPushButton" name="pushButton">
+         <widget class="QPushButton" name="btn_connect">
           <property name="text">
            <string>Connect</string>
           </property>
