--- a/ui/deploy_tool.ui
+++ b/ui/deploy_tool.ui
@@ -972,7 +972,7 @@
             </widget>
            </item>
            <item row="1" column="1">
-            <widget class="QComboBox" name="comboBox_2">
+            <widget class="QComboBox" name="combox_camstream_player">
              <item>
               <property name="text">
                <string>ffplay</string>
@@ -998,7 +998,7 @@
             </widget>
            </item>
            <item row="2" column="1">
-            <widget class="QLabel" name="label_19">
+            <widget class="QLabel" name="lbl_camstream_download">
              <property name="text">
               <string>&lt;a href=&quot;https://ffmpeg.org/&quot;&gt;Download Player&lt;/a&gt;</string>
              </property>
