--- a/res/custom-theme/stylesheet.qss
+++ b/res/custom-theme/stylesheet.qss
@@ -176,7 +176,7 @@ QTabBar::tab {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     min-width: 8ex;
-    padding: 2px;
+    padding: 2px 10px 2px 10px;
 }
 
 QTabBar::tab:hover {
