--- a/ui/camstream_dialog.ui
+++ b/ui/camstream_dialog.ui
@@ -59,9 +59,9 @@
       <property name="geometry">
        <rect>
         <x>0</x>
-        <y>0</y>
-        <width>606</width>
-        <height>668</height>
+        <y>-296</y>
+        <width>603</width>
+        <height>532</height>
        </rect>
       </property>
       <layout class="QGridLayout" name="gridLayout_6">
@@ -259,7 +259,7 @@
        <item row="20" column="2">
         <widget class="QLineEdit" name="txt_address">
          <property name="text">
-          <string>127.0.0.1</string>
+          <string>0.0.0.0</string>
          </property>
         </widget>
        </item>
@@ -619,7 +619,7 @@
       <enum>Qt::Horizontal</enum>
      </property>
      <property name="standardButtons">
-      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Ok</set>
+      <set>QDialogButtonBox::Cancel|QDialogButtonBox::Save</set>
      </property>
     </widget>
    </item>
