UI tweaks and implementation of functionality in camstream tab

--- a/res/custom-theme/stylesheet.qss
+++ b/res/custom-theme/stylesheet.qss
@@ -94,6 +94,11 @@ QMenuBar::item:selected {
     border-radius: 3px;
 }
 
+.QLineEdit:disabled{
+    color: @text_color_disabled@;
+    background-color: @bg_color_field_disabled@;
+}
+
 .QTextEdit{
     color: @text_color@;
     selection-color: @text_color@;
