--- a/ui/deploy_tool.ui
+++ b/ui/deploy_tool.ui
@@ -173,7 +173,7 @@
            <item row="3" column="3" colspan="2">
             <widget class="QLabel" name="label_6">
              <property name="text">
-              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;The ArPiRobot Core Library is installed on your computer and is used when deploying a program to the robot. When deploying a program, the installed version of the core library will be deployed along with it. &lt;/span&gt;&lt;span style=&quot; font-weight:700; font-style:italic;&quot;&gt;This is required for both all programming languages!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+              <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-style:italic;&quot;&gt;The ArPiRobot Core Library is installed on your computer and is used when deploying a program to the robot. When deploying a program, the installed version of the core library will be deployed along with it. &lt;/span&gt;&lt;span style=&quot; font-weight:700; font-style:italic;&quot;&gt;This is required for all programming languages!&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
              </property>
              <property name="alignment">
               <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -1292,7 +1292,7 @@
      <x>0</x>
      <y>0</y>
      <width>750</width>
-     <height>24</height>
+     <height>22</height>
     </rect>
    </property>
    <widget class="QMenu" name="menuFile">
