--- a/ui/settings_dialog.ui
+++ b/ui/settings_dialog.ui
@@ -20,14 +20,14 @@
    <property name="topMargin">
     <number>9</number>
    </property>
-   <item row="2" column="1">
+   <item row="1" column="1">
     <widget class="QCheckBox" name="chbox_larger_font">
      <property name="text">
       <string>Larger Fonts</string>
      </property>
     </widget>
    </item>
-   <item row="3" column="1">
+   <item row="2" column="1">
     <spacer name="vspacer">
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -40,10 +40,7 @@
      </property>
     </spacer>
    </item>
-   <item row="1" column="1">
-    <widget class="QComboBox" name="combox_themes"/>
-   </item>
-   <item row="4" column="1">
+   <item row="3" column="1">
     <widget class="QDialogButtonBox" name="buttonBox">
      <property name="styleSheet">
       <string notr="true">QPushButton{
@@ -66,7 +63,7 @@
       </font>
      </property>
      <property name="text">
-      <string>Theme</string>
+      <string>Interface</string>
      </property>
     </widget>
    </item>
