--- a/ui/deploy_tool.ui
+++ b/ui/deploy_tool.ui
@@ -850,6 +850,27 @@
            <string>Robot Access Point</string>
           </property>
           <layout class="QGridLayout" name="gridLayout_4">
+           <item row="5" column="0" colspan="2">
+            <widget class="QPushButton" name="btn_wifi_apply">
+             <property name="text">
+              <string>Apply</string>
+             </property>
+            </widget>
+           </item>
+           <item row="1" column="1">
+            <widget class="QLineEdit" name="txt_wifi_pass">
+             <property name="inputMask">
+              <string notr="true"/>
+             </property>
+            </widget>
+           </item>
+           <item row="0" column="1">
+            <widget class="QLineEdit" name="txt_wifi_ssid">
+             <property name="inputMask">
+              <string notr="true"/>
+             </property>
+            </widget>
+           </item>
            <item row="1" column="0">
             <widget class="QLabel" name="label_15">
              <property name="text">
@@ -857,38 +878,17 @@
              </property>
             </widget>
            </item>
-           <item row="0" column="0">
-            <widget class="QLabel" name="label_14">
+           <item row="4" column="0">
+            <widget class="QLabel" name="label_12">
              <property name="text">
-              <string>SSID (Name)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="0" column="2">
-            <widget class="QLineEdit" name="txt_wifi_ssid">
-             <property name="inputMask">
-              <string notr="true"/>
+              <string>Band</string>
              </property>
             </widget>
            </item>
            <item row="3" column="0">
             <widget class="QLabel" name="label_17">
              <property name="text">
-              <string>Channel (2.4GHz)</string>
-             </property>
-            </widget>
-           </item>
-           <item row="2" column="2">
-            <widget class="QLineEdit" name="txt_wifi_country">
-             <property name="inputMask">
-              <string notr="true"/>
-             </property>
-            </widget>
-           </item>
-           <item row="1" column="2">
-            <widget class="QLineEdit" name="txt_wifi_pass">
-             <property name="inputMask">
-              <string notr="true"/>
+              <string>Channel</string>
              </property>
             </widget>
            </item>
@@ -899,19 +899,45 @@
              </property>
             </widget>
            </item>
-           <item row="4" column="0" colspan="3">
-            <widget class="QPushButton" name="btn_wifi_apply">
-             <property name="text">
-              <string>Apply</string>
-             </property>
-            </widget>
-           </item>
-           <item row="3" column="2">
+           <item row="3" column="1">
             <widget class="QLineEdit" name="txt_wifi_channel">
+             <property name="toolTip">
+              <string>0 = auto select (recommended)
+2.4GHz: 1-14 (not all allowed, depends on country)
+5.0GHz: 32-177 (not all allowed, depends on country)</string>
+             </property>
              <property name="inputMask">
               <string notr="true"/>
              </property>
             </widget>
+           </item>
+           <item row="0" column="0">
+            <widget class="QLabel" name="label_14">
+             <property name="text">
+              <string>SSID (Name)</string>
+             </property>
+            </widget>
+           </item>
+           <item row="4" column="1">
+            <widget class="QComboBox" name="cbx_wifi_band">
+             <property name="toolTip">
+              <string>2.4GHz (recommended) - longer range but slower speeds
+5.0GHz - shorter range but faster speeds</string>
+             </property>
+             <item>
+              <property name="text">
+               <string>2.4GHz</string>
+              </property>
+             </item>
+             <item>
+              <property name="text">
+               <string>5.0GHz</string>
+              </property>
+             </item>
+            </widget>
+           </item>
+           <item row="2" column="1">
+            <widget class="QComboBox" name="cbx_wifi_country"/>
            </item>
           </layout>
          </widget>
@@ -1319,7 +1345,6 @@
   <tabstop>txt_hostname</tabstop>
   <tabstop>btn_change_hostname</tabstop>
   <tabstop>txt_wifi_channel</tabstop>
-  <tabstop>txt_wifi_country</tabstop>
   <tabstop>txt_wifi_ssid</tabstop>
   <tabstop>txt_wifi_pass</tabstop>
   <tabstop>btn_wifi_apply</tabstop>
